--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "header-parser",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+      "node": "5.6.0",
+      "npm": "5.0.3"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
